[package]
name = "rust_art"
version = "0.1.0"
authors = ["jovan <jdmitrovic@gmail.com>"]
edition = "2021"

[dependencies]
crunchy = "0.2.2"
rand_pcg = "0.3.1"
rand = "0.8.5"
enum_dispatch = "0.3.8"
auto_impl = "1.0.1"
criterion = "0.3.5"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "benches"
harness = false
